# wisp

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: deploy-web.yml  flutter-release.yml  flutter.yml
crates/app/: Cargo.toml
crates/app/src/: blob_dispatcher.rs  error.rs  identity.rs  lib.rs  nearby.rs  quic_keepalive.rs  types.rs
crates/app/src/diagnostics/: lan.rs  local.rs  mod.rs  network.rs  p2p.rs  rendezvous.rs  vpn.rs
crates/app/src/receiver/: actor.rs  drift_handler.rs  mod.rs  runtime.rs  session.rs  tests.rs  wisp_handler.rs
crates/app/src/send/: destination.rs  draft.rs  session.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lan.rs  rendezvous.rs
crates/core/src/blobs/: mod.rs  receive.rs  send.rs  util.rs
crates/core/src/fs_plan/: conflict.rs  preview.rs
crates/core/src/protocol/: error.rs  message.rs  mod.rs  receive.rs  send.rs  wire.rs
crates/core/src/transfer/: path.rs  receiver.rs  sender.rs  types.rs
crates/core/src/util/: device_name.rs  mod.rs
crates/server/: Cargo.toml  README.md  docker-compose.yml
crates/server/src/: lib.rs  main.rs
crates/web-receiver/: Cargo.toml  README.md
crates/web-receiver/src/: download.rs  lib.rs  send.rs  wire.rs  zip.rs
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs  message.rs  plan.rs  rendezvous.rs  ticket.rs
docs/: CNAME  _config.yml  app.js  connection-test-plan.md  deploy-rendezvous-server.md  index.html  macos-no-metal-build.md  manifest.webmanifest  privacy-policy.md  rename-to-wisp.md  style.css  sw.js  upstream-bug-audit.md
docs/pkg/: wisp_web_receiver.js
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/android/app/src/main/: AndroidManifest.xml
flutter/integration_test/: transfer_test.dart
flutter/ios/: Podfile
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/app/: app.dart  app_bootstrap.dart  app_router.dart
flutter/lib/features/about/presentation/: about_page.dart
flutter/lib/features/dev/: usb_aoa_spike_page.dart
flutter/lib/features/diagnostics/application/: diagnostics_controller.dart  diagnostics_source.dart  firewall_warning_controller.dart  permission_probe.dart
flutter/lib/features/diagnostics/domain/: check_result.dart  diagnostics_state.dart
flutter/lib/features/diagnostics/presentation/: connection_test_page.dart
flutter/lib/features/identity/: identity_providers.dart
flutter/lib/features/send/: send_drop_zone.dart  send_drop_zone_surface.dart
flutter/lib/features/send/application/: model.dart  (+6 more)
flutter/lib/platform/: android_file_picker.dart  android_media_store.dart  android_share_intent.dart  desktop_integration.dart  device_auth_gate.dart  identity_storage.dart  send_transfer_source.dart  windows_context_menu.dart
flutter/lib/platform/android/: transfer_keepalive_channel.dart  usb_aoa_channel.dart  usb_tether_channel.dart
flutter/lib/platform/rust/: rendezvous_defaults.dart
flutter/lib/shell/: desktop_shell.dart  mobile_shell.dart  title_bar_shell.dart
flutter/lib/shell/widgets/: android_permission_bootstrap.dart  app_version_text.dart  firewall_warning_banner.dart  mobile_identity_card.dart  page_header.dart  select_files_card.dart  shell_picking_actions.dart
flutter/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
flutter/lib/theme/: design-tokens.md  drift_theme.dart  wisp_theme.dart
flutter/linux/: CMakeLists.txt  dev.vigov5.wisp.desktop  dev.vigov5.wisp.yaml
flutter/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/linux/runner/: my_application.cc
flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
flutter/macos/Runner/Base.lproj/: MainMenu.xib
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/rust/: Cargo.toml
flutter/rust/src/: frb_generated.rs  lib.rs
flutter/rust/src/api/: device.rs  diagnostics.rs  error.rs  lan.rs  mod.rs  preview.rs  receiver.rs  sender.rs  simple.rs
flutter/rust_builder/: pubspec.yaml
flutter/rust_builder/android/: build.gradle  settings.gradle
flutter/rust_builder/cargokit/gradle/: plugin.gradle
flutter/rust_builder/ios/: wisp_bridge.podspec
flutter/rust_builder/linux/: CMakeLists.txt
flutter/rust_builder/macos/: wisp_bridge.podspec
flutter/rust_builder/windows/: CMakeLists.txt
flutter/test/: app_bootstrap_test.dart  app_router_test.dart  theme_switching_test.dart  transfer_test.dart  widget_test.dart
flutter/test/features/identity/: identity_backup_codec_test.dart
flutter/test/features/receive/: feature_test.dart  idle_card_test.dart
flutter/test/features/saved_devices/: saved_devices_repository_test.dart
flutter/test/features/settings/: settings_controller_test.dart  settings_page_test.dart  settings_path_display_test.dart  settings_repository_test.dart
flutter/test/features/transfers/: connection_path_test.dart  feature_test.dart  result_view_data_test.dart  service_test.dart
flutter/test/features/update/: update_controller_test.dart  update_release_test.dart
flutter/test/platform/: identity_storage_test.dart
flutter/test/platform/android/: transfer_keepalive_channel_test.dart
flutter/test/shell/: drift_shell_test.dart  wisp_shell_test.dart
flutter/test/support/: settings_test_overrides.dart  test_overrides.dart
flutter/tool/: gen_win_icon.dart  run-macos-no-metal.sh
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt  inno_setup.iss
flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  single_instance.cpp  single_instance.h  win32_window.cpp  win32_window.h  windows_integration.cpp  windows_integration.h
web/: README.md  app.js  build.sh  index.html  sample.txt  style.css  sw.js  sync-docs.sh
(+112 files in other folders)
