[workspace]
members = [
    "crates/app",
    "crates/cli",
    "crates/core",
    "crates/server",
    "crates/wire",
    "crates/web-receiver",
]
# web-receiver is a wasm32-only crate; keep it out of the default set so a bare
# `cargo build`/`test` (native app dev) skips its heavy browser deps. It's still
# a member, so `cargo build --target wasm32-unknown-unknown -p wisp-web-receiver`
# works. See crates/web-receiver/README.md for the wasm build (needs clang).
default-members = [
    "crates/app",
    "crates/cli",
    "crates/core",
    "crates/server",
    "crates/wire",
]
exclude = ["flutter/rust"]
resolver = "2"

# Optimized profile for the wasm browser receiver. Only crates built with
# `--profile wasm-release` compile under it, so native release builds are
# unaffected. `opt-level = 2` (not `z`) matters a lot here: the receiver is
# bottlenecked on QUIC AEAD (ring) + blake3 blob verification, which run ~10-30×
# slower when unoptimized — a size-first `z` build throttles relay throughput.
# Still an order of magnitude smaller than the ~18 MB debug wasm.
[profile.wasm-release]
inherits = "release"
opt-level = 2
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.package]
edition = "2024"
version = "1.7.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
axum = "0.8"
base64 = "0.22"
bincode = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
futures-lite = "2.6"
http-body-util = "0.1"
iroh = { version = "0.97", features = ["address-lookup-mdns"] }
iroh-blobs = "0.99"
irpc = "0.13"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.47", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
indicatif = "0.17"
mdns-sd = "0.18"
flume = "0.11"
walkdir = "2.5"
thiserror = "2.0"
if-addrs = "0.15"
netdev = "0.40"
