[package]
name = "drift-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
drift-core = { path = "../core" }
fs2 = "0.4"
iroh.workspace = true
iroh-blobs.workspace = true
flume.workspace = true
mdns-sd.workspace = true
rand.workspace = true
reqwest.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
tracing.workspace = true
