[package]
name = "wisp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
wisp-app = { path = "../app" }
wisp-core = { path = "../core" }
iroh.workspace = true
mdns-sd.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
