[package]
name = "wisp_bridge"
version = "1.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
wisp-app = { path = "../../crates/app" }
wisp-core = { path = "../../crates/core" }
flutter_rust_bridge = "=2.12.0"
iroh = "0.97"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.50", features = [
    "fs",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = "0.1"
futures-lite = "2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = "symbols"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
