[package]
name = "wisp_bridge"
version = "1.7.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
wisp-app = { path = "../../crates/app" }
wisp-core = { path = "../../crates/core" }
flutter_rust_bridge = "=2.12.0"
iroh = "0.97"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.50", features = [
    "fs",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = "0.1"
futures-lite = "2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = "symbols"

# Optimize dependencies (e.g. blake3, iroh) even in debug builds. Without this,
# deps compile at opt-level=0 and on-device hashing/crypto runs ~25x slower
# (BLAKE3 measured 28 MB/s debug vs 747 MB/s optimized), making debug transfers
# painfully slow. The bridge crate itself stays unoptimized for fast rebuilds.
[profile.dev.package."*"]
opt-level = 3

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
